--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header><h2>Influencer products</h2></header>
+    <header>Influencer products</header>
     <article>
         
         <div class="half-width">
@@ -41,6 +41,15 @@
         <img src="logos/Target.svg" alt="">
     </div>
     <hr>
+        <h2>Popular Collection</h2>
+ <section>
+     <img src="image/mic.png" alt="">
+     <h3>microphone</h3>
+     <h4>$120.25</h4>
+     <p>
+
+     </p>
+ </section>
 </body>
 
 </html>
